src/test/ui/consts/const-fn-error.stderr
error[E0658]: let bindings in constant functions are unstable (see issue #48821)
  --> $DIR/const-fn-error.rs:16:19
   |
LL |     let mut sum = 0;
   |                   ^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error[E0658]: statements in constant functions are unstable (see issue #48821)
  --> $DIR/const-fn-error.rs:16:19
   |
LL |     let mut sum = 0;
   |                   ^
   |
   = help: add #![feature(const_let)] to the crate attributes to enable

error[E0015]: calls in constant functions are limited to constant functions, tuple structs and tuple variants
  --> $DIR/const-fn-error.rs:19:14
   |
LL |     for i in 0..x {
   |              ^^^^

error[E0019]: constant function contains unimplemented expression type
  --> $DIR/const-fn-error.rs:19:14
   |
LL |     for i in 0..x {
   |              ^^^^

error[E0080]: could not evaluate constant expression
  --> $DIR/const-fn-error.rs:29:13
   |
LL |     for i in 0..x {
   |              ---- inside call to `std::iter::range::<impl std::iter::Iterator for std::ops::Range<A>><usize>::next`
...
LL |     let a : [i32; f(X)]; //~ ERROR E0080
   |             ^^^^^^----^
   |                   |
   |                   inside call to `f`
   | 
  ::: $SRC_DIR/libcore/ptr.rs:LL:COL
   |
LL |         let z = read(x);
   |                 ------- inside call to `std::ptr::read::<usize>`
...
LL |     let mut tmp: T = mem::uninitialized();
   |                      -------------------- inside call to `std::mem::uninitialized::<usize>`
   | 
  ::: $SRC_DIR/libcore/iter/range.rs:LL:COL
   |
LL |                 mem::swap(&mut n, &mut self.start);
   |                 ---------------------------------- inside call to `std::mem::swap::<usize>`
   | 
  ::: $SRC_DIR/libcore/mem.rs:LL:COL
   |
LL |     intrinsics::uninit()
   |     -------------------- "calling intrinsic `uninit`" needs an rfc before being allowed inside constants
...
LL |         ptr::swap_nonoverlapping_one(x, y);
   |         ---------------------------------- inside call to `std::ptr::swap_nonoverlapping_one::<usize>`

error: aborting due to 5 previous errors

Some errors occurred: E0015, E0019, E0080, E0658.
For more information about an error, try `rustc --explain E0015`.
